blink/images: Set image animation policy correctly for style images.

StyleImage was not updating the image animation policy correctly, which
was causing background-image images to animate even when disabled from
the browser.

R=chrishtr@chromium.org

Bug: 882925
Change-Id: I54c6c5241f24925ddf67e86f2323b209bdf78b2b
Reviewed-on: https://chromium-review.googlesource.com/1227490
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592222}