third_party/blink/renderer/core/style/style_fetched_image.cc
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/core/css/css_image_value.h"
 #include "third_party/blink/renderer/core/dom/document.h"
+#include "third_party/blink/renderer/core/frame/settings.h"
 #include "third_party/blink/renderer/core/loader/resource/image_resource_content.h"
 #include "third_party/blink/renderer/core/style/computed_style.h"
 #include "third_party/blink/renderer/core/svg/graphics/svg_image.h"
@@ -132,6 +133,8 @@ void StyleFetchedImage::ImageNotifyFinished(ImageResourceContent*) {
 
     if (document_ && image.IsSVGImage())
       ToSVGImage(image).UpdateUseCounters(*document_);
+
+    image_->UpdateImageAnimationPolicy();
   }
 
   // Oilpan: do not prolong the Document's lifetime.
@@ -160,6 +163,14 @@ void StyleFetchedImage::LoadDeferredImage(const Document& document) {
   is_lazyload_possibly_deferred_ = false;
   document_ = &document;
   image_->LoadDeferredImage(document_->Fetcher());
+}
+
+bool StyleFetchedImage::GetImageAnimationPolicy(ImageAnimationPolicy& policy) {
+  if (!document_ || !document_->GetSettings()) {
+    return false;
+  }
+  policy = document_->GetSettings()->GetImageAnimationPolicy();
+  return true;
 }
 
 void StyleFetchedImage::Trace(blink::Visitor* visitor) {
